--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,22 +18,12 @@ repos:
       - id: no-commit-to-branch
         args:
         - --branch=main
-  - repo: https://github.com/awslabs/git-secrets
-    rev: master
-    hooks:
-    - id: git-secrets
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.14.1
-    hooks:
-    -   id: gitleaks
-        entry: gitleaks detect --baseline-path gitleaks-baseline.json
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.76.0
     hooks:
       - id: terraform_fmt
       # - id: terraform_validate
       #   exclude: region/[^/]+$.
-
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
     hooks:
@@ -44,3 +34,8 @@ repos:
     rev: 32.221.1
     hooks:
       - id: renovate-config-validator
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.4.0
+    hooks:
+    -   id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
