--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - DYNAMODB_TABLE_LPAS=lpas
       - GOVUK_PAY_BASE_URL=http://pay-mock:4010
       - ISSUER=http://sign-in-mock:8080
+      - ORDNANCE_SURVEY_BASE_URL=http://ordnance-survey-mock:4010
 
   localstack:
     build:
@@ -57,3 +58,12 @@ services:
       - '4010:4010'
     volumes:
       - ./mocks/GOVUKPay:/tmp
+
+  ordnance-survey-mock:
+    image: stoplight/prism:4.11.0
+    command: 'mock /tmp/publicapi_spec.yaml -h 0.0.0.0'
+    container_name: ordnance-survey-mock
+    ports:
+      - '4011:4010'
+    volumes:
+      - ./mocks/OrdnanceSurveyPlacesAPI:/tmp
