--- a/.github/workflows/workflow_destroy_pr_environment.yml
+++ b/.github/workflows/workflow_destroy_pr_environment.yml
@@ -36,7 +36,7 @@ jobs:
           workspace=${workspace//\/}
           workspace=${workspace:0:11}
           workspace=$(echo ${workspace} | tr '[:upper:]' '[:lower:]')
-          echo ::set-output name=name::${workspace}
+          echo "name=${workspace}" >> $GITHUB_OUTPUT
           echo ${workspace}
     outputs:
           environment_workspace_name: ${{ steps.name_workspace.outputs.name }}
