--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -41,7 +41,7 @@ jobs:
           sarif_file: 'trivy-results.sarif'
       - uses: unfor19/install-aws-cli-action@v1
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1.7.0
+        uses: aws-actions/configure-aws-credentials@v1.7.0-node16
         with:
           aws-region: eu-west-1
           role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-github-actions-ecr-push
