--- a/.github/workflows/remove_ingress_job.yml
+++ b/.github/workflows/remove_ingress_job.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: unfor19/install-aws-cli-action@v1
         name: Run Against Image/aws-cli-action
       - name: Manage Ingress/Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1.7.0
+        uses: aws-actions/configure-aws-credentials@v1.7.0-node16
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
