--- a/.github/workflows/terraform_account_job.yml
+++ b/.github/workflows/terraform_account_job.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           terraform_version: 1.2.6
       - name: Configure AWS Credentials For Terraform
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1.7.0-node16
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
