Move telemetry stuff to a package

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -6,6 +6,7 @@ coverage:
     - "*_test.go"
     - "./mocks/*"
     - "./app/internal/identity/yoti*"
+    - "./app/internal/telemetry"
   status:
     project:
       default:
