--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "build:fonts": "mkdir -p web/static/assets/fonts && cp node_modules/govuk-frontend/govuk/assets/fonts/* web/static/assets/fonts",
         "cypress:open": "node_modules/.bin/cypress open",
         "cypress:run": "node_modules/.bin/cypress run -vvv",
-        "cypress:run:debug": "node_modules/.bin/cypress run --headed",
-        "cypress:parallel": "cypress-parallel -s cypress:run -t 4 -d ./cypress/e2e",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "cypress:parallel": "cypress-parallel -s cypress:run -t 4 -d ./cypress/e2e"
     },
     "license": "MIT",
     "dependencies": {
