--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "MIT",
     "dependencies": {
         "@ministryofjustice/frontend": "1.6.2",
+        "aws-rum-web": "^1.11.0",
         "govuk-frontend": "4.3.1",
         "jquery": "3.6.1"
     },
