--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -89,8 +89,10 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name:
-        run: ls ./cypress/e2e/videos
+      - name: "list videos"
+        run: |
+          ls ./cypress/e2e
+          ls ./cypress/e2e/videos
 
       - name: Persist Cypress failure screenshots as artifacts
         if: failure()
