--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -54,56 +54,50 @@ jobs:
           docker compose -f docker-compose.yml -f docker-compose.ci.yml build
           docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
 
-#      - name: Manage Ingress/Configure AWS Credentials
-#        if: ${{ inputs.run_against_image != true }}
-#        uses: aws-actions/configure-aws-credentials@v1.7.0
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
-#          aws-region: eu-west-1
-#          role-duration-seconds: 900
-#          role-session-name: OPGModernisingLPATerraformGithubAction
-#      - name: Download environment config file
-#        if: ${{ inputs.run_against_image != true }}
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: environment_config_file
-#      - uses: actions/setup-python@v4
-#        if: ${{ inputs.run_against_image != true }}
-#        with:
-#          python-version: '3.9'
-#          check-latest: true
-#      - run: pip install -r ./scripts/ci_ingress/requirements.txt
-#        if: ${{ inputs.run_against_image != true }}
-#      - name: add_ingress
-#        if: ${{ inputs.run_against_image != true }}
-#        run: python ./scripts/ci_ingress/ci_ingress.py ./environment_config.json --add
+      - name: Manage Ingress/Configure AWS Credentials
+        if: ${{ inputs.run_against_image != true }}
+        uses: aws-actions/configure-aws-credentials@v1.7.0
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
+          aws-region: eu-west-1
+          role-duration-seconds: 900
+          role-session-name: OPGModernisingLPATerraformGithubAction
+      - name: Download environment config file
+        if: ${{ inputs.run_against_image != true }}
+        uses: actions/download-artifact@v3
+        with:
+          name: environment_config_file
+      - uses: actions/setup-python@v4
+        if: ${{ inputs.run_against_image != true }}
+        with:
+          python-version: '3.9'
+          check-latest: true
+      - run: pip install -r ./scripts/ci_ingress/requirements.txt
+        if: ${{ inputs.run_against_image != true }}
+      - name: add_ingress
+        if: ${{ inputs.run_against_image != true }}
+        run: python ./scripts/ci_ingress/ci_ingress.py ./environment_config.json --add
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
           record: true
-          config: specPattern=cypress/e2e/certificate-provider.cy.js,video=true
+          config: video=true
         env:
           CYPRESS_baseUrl: ${{ inputs.base_url }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: "list videos"
-        if: failure()
-        run: |
-          ls ./cypress/e2e
-          ls ./cypress/e2e/videos
-
       - name: Persist Cypress failure screenshots as artifacts
-        if: failure()
+        if: ${{ failure() }}
         uses: actions/upload-artifact@v3
         with:
           name: cypress-failure-screenshots
           path: ./cypress/screenshots/
 
       - name: Persist Cypress videos artifacts
-        if: failure()
+        if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
           name: cypress-run-videos
