MLPAB-504: Fix CVE 2022 3517 (#221)

--- a/package.json
+++ b/package.json
@@ -8,23 +8,21 @@
         "build:images": "mkdir -p web/static/assets/images && cp node_modules/govuk-frontend/govuk/assets/images/* node_modules/@ministryofjustice/frontend/moj/assets/images/* web/static/assets/images",
         "build:fonts": "mkdir -p web/static/assets/fonts && cp node_modules/govuk-frontend/govuk/assets/fonts/* web/static/assets/fonts",
         "cypress:open": "node_modules/.bin/cypress open",
-        "cypress:run": "node_modules/.bin/cypress run -vvv",
-        "cypress:parallel": "cypress-parallel -s cypress:run -t 4 -d ./cypress/e2e"
+        "cypress:run": "node_modules/.bin/cypress run -vvv"
     },
     "license": "MIT",
     "dependencies": {
-        "@ministryofjustice/frontend": "1.6.3",
+        "@ministryofjustice/frontend": "^1.6.3",
         "aws-rum-web": "^1.11.0",
-        "govuk-frontend": "4.4.0",
-        "jquery": "3.6.1"
+        "govuk-frontend": "^4.4.0",
+        "jquery": "^3.6.1"
     },
     "devDependencies": {
-        "axe-core": "4.5.2",
-        "cypress": "10.11.0",
-        "cypress-axe": "1.0.0",
-        "cypress-multi-reporters": "1.6.1",
-        "cypress-parallel": "0.9.1",
-        "esbuild": "0.15.16",
-        "sass": "1.56.1"
+        "axe-core": "^4.5.2",
+        "cypress": "^11.2",
+        "cypress-axe": "^1.0.0",
+        "cypress-multi-reporters": "^1.6.1",
+        "esbuild": "^0.15.16",
+        "sass": "^1.56.1"
     }
 }
