--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
       - name: Extract branch name
         id: extract_branch
         run: |
@@ -30,7 +32,7 @@ jobs:
         id: detect_changes
         if: github.ref != 'refs/heads/main'
         run: |
-          git diff --quiet 'refs/heads/main' -- app && \
+          git diff --quiet HEAD 'refs/heads/main' -- app && \
           echo "changes=false" >> $GITHUB_OUPUT || \
           echo "changes=true" >> $GITHUB_OUPUT
 
