--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -32,7 +32,7 @@ jobs:
         id: detect_changes
         if: github.ref != 'refs/heads/main'
         run: |
-          git diff --quiet HEAD 'refs/heads/main' -- app && \
+          git diff --quiet origin/main -- app && \
           echo "changes=false" >> $GITHUB_OUPUT || \
           echo "changes=true" >> $GITHUB_OUPUT
 
