--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
       - name: Extract branch name
         id: extract_branch
         run: |
@@ -32,7 +32,7 @@ jobs:
         id: detect_changes
         if: github.ref != 'refs/heads/main'
         run: |
-          git diff --quiet origin/main -- app && \
+          git diff --quiet HEAD main -- app && \
           echo "changes=false" >> $GITHUB_OUPUT || \
           echo "changes=true" >> $GITHUB_OUPUT
 
