--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -1,6 +1,9 @@
 on:
   workflow_call:
     outputs:
+      changes_detected:
+        description: "Boolean value for changes detected in /app"
+        value: ${{ jobs.detect_changes_compared_to_main.outputs.changes_detected }}
       version_tag:
         description: "Docker Image Tag"
         value: ${{ jobs.create_tags.outputs.docker_tag }}
@@ -9,12 +12,37 @@ on:
         value: ${{ jobs.generate_environment_workspace_name.outputs.environment_workspace_name }}
 
 jobs:
-  create_tags:
+  detect_changes_compared_to_main:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Detect changes in /app compared to main using git diff
+        id: detect_changes
+        if: github.ref != 'refs/heads/main'
+        run: |
+          git diff --quiet HEAD origin/main -- app && \
+          echo "changes=false" >> $GITHUB_OUTPUT || \
+          echo "changes=true" >> $GITHUB_OUTPUT
+      # - name: No changes detected condition
+      #   if: steps.detect_changes.outputs.changes == 'false'
+      #   id: no_changes
+      #   run: |
+      #     echo "tag=latest" >> $GITHUB_OUTPUT
+
+      # - name: Changes detected condition
+      #   if: steps.detect_changes.outputs.changes == 'true'
+      #   run: |
+      #     echo "there were changes"
+    outputs:
+      changes_detected: ${{ steps.detect_changes.outputs.changes }}
+
+  create_tags:
+    if : jobs.detect_changes_compared_to_main.outputs.changes_detected == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - name: Extract branch name
         id: extract_branch
         run: |
@@ -27,27 +55,9 @@ jobs:
             branch=${branch//\/}
             echo BRANCH_NAME=${branch} >> $GITHUB_ENV
           fi
-
-      - name: Detect changes in /app compared to main using git diff
-        id: detect_changes
-        if: github.ref != 'refs/heads/main'
-        run: |
-          git diff --quiet HEAD origin/main -- app && \
-          echo "changes=false" >> $GITHUB_OUTPUT || \
-          echo "changes=true" >> $GITHUB_OUTPUT
-
-      - name: No changes detected condition
-        if: steps.detect_changes.outputs.changes == 'false'
-        run: |
-          echo "there were no changes"
-
-      - name: Changes detected condition
-        if: steps.detect_changes.outputs.changes == 'true'
-        run: |
-          echo "there were changes"
-
       - name: Bump version
         id: bump_version
+        if: steps.detect_changes.outputs.changes == 'true'
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
