--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -64,6 +64,11 @@ jobs:
     needs: detect_changes_compared_to_main
     if : needs.detect_changes_compared_to_main.outputs.changes_detected == 'false'
     runs-on: ubuntu-latest
+    steps:
+      - name: Pull production environment tag
+        id: pull_production_tag
+        run: |
+          echo latest
     outputs:
       docker_tag: latest
 
