--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -52,7 +52,7 @@ jobs:
           TAG: ${{ inputs.tag }}
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml pull
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml build
+          # docker compose -f docker-compose.yml -f docker-compose.ci.yml build
           docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
 
       - name: Manage Ingress/Configure AWS Credentials
