add configure aws creds and set tag output in pull-tags steps

--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -68,14 +68,14 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          aws-region: eu-west-1
+          aws-region: us-east-1
           role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-github-actions-ssm-get-parameter
           role-duration-seconds: 900
           role-session-name: GithubActionsSSMGetParameter
       - name: Pull production environment tag
         id: pull_production_tag
         run: |
-          echo "tag=${{ aws ssm get-parameters --names "/modernising-lpa/container-version/233mlpab518"}}" >> $GITHUB_OUTPUT
+          echo "tag=latest" >> $GITHUB_OUTPUT
     outputs:
       docker_tag: ${{ steps.pull_production_tag.outputs.tag }}
 
