--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -78,7 +78,7 @@ jobs:
       name: PR Environment Deploy
       needs: [
         create_tags,
-        # docker_build_scan_push,
+        docker_build_scan_push,
         # ui_tests_image
       ]
       uses: ./.github/workflows/terraform_environment_job.yml
