--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -93,6 +93,7 @@ jobs:
       - name: Pull production environment tag
         id: pull_production_tag
         run: |
+          aws ssm get-parameter --name '/modernising-lpa/container-version/preproduction' | jq -r .Parameter.Value
           echo "tag=$(aws ssm get-parameter --name '/modernising-lpa/container-version/preproduction' | jq -r .Parameter.Value)" >> $GITHUB_OUTPUT
     outputs:
       docker_tag: ${{ steps.pull_production_tag.outputs.tag }}
