--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -27,15 +27,15 @@ jobs:
     name: Create Tags
     uses: ./.github/workflows/tags_job.yml
 
-  go_unit_tests:
-    name: Run Go unit tests
-    uses: ./.github/workflows/go-unit-tests.yml
+  # go_unit_tests:
+  #   name: Run Go unit tests
+  #   uses: ./.github/workflows/go-unit-tests.yml
 
   docker_build_scan_push:
     name: Docker Build, Scan and Push
     uses: ./.github/workflows/docker_job.yml
     needs: [
-      go_unit_tests,
+      # go_unit_tests,
       create_tags
       ]
     with:
@@ -72,20 +72,21 @@ jobs:
   #   with:
   #     run_against_image: true
   #     tag: ${{ needs.create_tags.outputs.version_tag }}
+  #     changes_detected: ${{ needs.create_tags.outputs.changes_detected }}
   #   secrets: inherit
 
-  pr_deploy:
-      name: PR Environment Deploy
-      needs: [
-        create_tags,
-        docker_build_scan_push,
-        # ui_tests_image
-      ]
-      uses: ./.github/workflows/terraform_environment_job.yml
-      with:
-        workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
-        version_tag: ${{ needs.create_tags.outputs.version_tag }}
-      secrets: inherit # pragma: allowlist secret
+  # pr_deploy:
+  #     name: PR Environment Deploy
+  #     needs: [
+  #       create_tags,
+  #       docker_build_scan_push,
+  #       # ui_tests_image
+  #     ]
+  #     uses: ./.github/workflows/terraform_environment_job.yml
+  #     with:
+  #       workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
+  #       version_tag: ${{ needs.create_tags.outputs.version_tag }}
+  #     secrets: inherit # pragma: allowlist secret
 
   # ui_tests_pr_env:
   #   name: Run Cypress UI Tests On PR Environment
