--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -75,18 +75,18 @@ jobs:
   #     changes_detected: ${{ needs.create_tags.outputs.changes_detected }}
   #   secrets: inherit
 
-  # pr_deploy:
-  #     name: PR Environment Deploy
-  #     needs: [
-  #       create_tags,
-  #       docker_build_scan_push,
-  #       # ui_tests_image
-  #     ]
-  #     uses: ./.github/workflows/terraform_environment_job.yml
-  #     with:
-  #       workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
-  #       version_tag: ${{ needs.create_tags.outputs.version_tag }}
-  #     secrets: inherit # pragma: allowlist secret
+  pr_deploy:
+      name: PR Environment Deploy
+      needs: [
+        create_tags,
+        docker_build_scan_push,
+        # ui_tests_image
+      ]
+      uses: ./.github/workflows/terraform_environment_job.yml
+      with:
+        workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
+        version_tag: ${{ needs.create_tags.outputs.version_tag }}
+      secrets: inherit # pragma: allowlist secret
 
   # ui_tests_pr_env:
   #   name: Run Cypress UI Tests On PR Environment
