--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -106,6 +106,7 @@ jobs:
       pull_tags,
       ]
     runs-on: ubuntu-latest
+    if: always()
     steps:
       - name: consolidate tags
         id: consolidate_tags
