--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -44,13 +44,13 @@ jobs:
           role-duration-seconds: 900
           role-session-name: OPGModernisingLPATerraformGithubAction
       - name: Run Against Image/ECR Login
-        if: ${{ inputs.run_against_image }}
+        if: ${{ inputs.run_against_image }} && ${{ inputs.changes_detected == true}}
         id: login_ecr
         uses: aws-actions/amazon-ecr-login@v1.5.3
         with:
           registries: 311462405659
       - name: Run Against Image/Run Docker Compose Service
-        if: ${{ inputs.run_against_image }}
+        if: ${{ inputs.run_against_image }}  && ${{ inputs.changes_detected == true}}
         env:
           ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
           ECR_REPOSITORY: modernising-lpa/app
