--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -1,9 +1,11 @@
 on:
   workflow_call:
-    outputs:
+    inputs:
       changes_detected:
-        description: "Boolean value for changes detected in /app"
-        value: ${{ jobs.detect_changes_compared_to_main.outputs.changes_detected }}
+        description: 'Boolean value for changes detected in /app'
+        required: true
+        type: string
+    outputs:
       version_tag:
         description: "Docker Image Tag"
         value: ${{ jobs.consolidate_tags.outputs.docker_tag }}
@@ -12,39 +14,9 @@ on:
         value: ${{ jobs.generate_environment_workspace_name.outputs.environment_workspace_name }}
 
 jobs:
-  detect_changes_compared_to_main:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Detect changes in /app compared to main using git diff
-        id: detect_changes
-        if: github.ref != 'refs/heads/main'
-        run: |
-          git diff --quiet HEAD origin/main -- app && \
-          echo "changes=false" >> $GITHUB_OUTPUT || \
-          echo "changes=true" >> $GITHUB_OUTPUT
-    outputs:
-      changes_detected: ${{ steps.detect_changes.outputs.changes }}
-  notify_jobs_will_be_skipped:
-    needs: detect_changes_compared_to_main
-    if: needs.detect_changes_compared_to_main.outputs.changes_detected == 'false'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Notify jobs will be skipped
-        run: |
-          echo '### No Changes Detected in /app!' >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "The following jobs will be skipped" >> $GITHUB_STEP_SUMMARY
-          echo "- Create Tags" >> $GITHUB_STEP_SUMMARY
-          echo "- Go Run Unit Tests" >> $GITHUB_STEP_SUMMARY
-          echo "- Docker Build, Scan and Push to ECR" >> $GITHUB_STEP_SUMMARY
-          echo "- Cypress Tests Against Docker Image" >> $GITHUB_STEP_SUMMARY
-
   create_tags:
     needs: detect_changes_compared_to_main
-    if : needs.detect_changes_compared_to_main.outputs.changes_detected == 'true'
+    if : inputs.changes_detected == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -93,8 +65,7 @@ jobs:
       environment_workspace_name: ${{ steps.name_workspace.outputs.name }}
 
   pull_tags:
-    needs: [ detect_changes_compared_to_main ]
-    if : needs.detect_changes_compared_to_main.outputs.changes_detected == 'false'
+    if : inputs.changes_detected == 'false'
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials
@@ -115,7 +86,6 @@ jobs:
 
   consolidate_tags:
     needs: [
-      detect_changes_compared_to_main,
       create_tags,
       pull_tags,
       ]
@@ -125,7 +95,7 @@ jobs:
       - name: consolidate tags
         id: consolidate_tags
         run: |
-          if ${{needs.detect_changes_compared_to_main.outputs.changes_detected == 'false'}}; then
+          if ${{inputs.changes_detected == 'false'}}; then
             echo "tag=${{needs.pull_tags.outputs.docker_tag}}" >> $GITHUB_OUTPUT
           else
             echo "tag=${{needs.create_tags.outputs.docker_tag}}" >> $GITHUB_OUTPUT
