--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -85,6 +85,7 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
+        if: inputs.changes_detected == 'true'
         env:
           CYPRESS_baseUrl: ${{ inputs.base_url }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
