--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -36,7 +36,7 @@ jobs:
 
   go_unit_tests:
     name: Run Go unit tests
-    if: needs.detect_changes.outputs.changes_detected == 'true' &&
+    if: needs.detect_changes.outputs.changes_detected == 'true'
     needs: create_tags
     uses: ./.github/workflows/go-unit-tests.yml
     with:
