--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -80,28 +80,29 @@ jobs:
   #     workspace_name: production
   #   secrets: inherit # pragma: allowlist secret
 
-  # ui_tests_image:
-  #   name: Run Cypress UI Tests On Images
-  #   if: |
-  #     needs.detect_changes.outputs.changes_detected == 'true' &&
-  #     needs.docker_build_scan_push.result == 'success' || needs.docker_build_scan_push.result == 'skipped'
-  #   uses: ./.github/workflows/ui_test_job.yml
-  #   needs: [docker_build_scan_push, create_tags]
-  #   with:
-  #     run_against_image: true
-  #     tag: ${{ needs.create_tags.outputs.version_tag }}
-  #     changes_detected: ${{ needs.detect_changes.outputs.changes_detected }}
-  #   secrets: inherit # pragma: allowlist secret
+  ui_tests_image:
+    name: Run Cypress UI Tests On Images
+    if: |
+      needs.detect_changes.outputs.changes_detected == 'true' &&
+      needs.docker_build_scan_push.result == 'success' || needs.docker_build_scan_push.result == 'skipped'
+    uses: ./.github/workflows/ui_test_job.yml
+    needs: [docker_build_scan_push, create_tags]
+    with:
+      run_against_image: true
+      tag: ${{ needs.create_tags.outputs.version_tag }}
+      changes_detected: ${{ needs.detect_changes.outputs.changes_detected }}
+    secrets: inherit # pragma: allowlist secret
 
   pr_deploy:
       name: PR Environment Deploy
       if: |
         always() &&
-        (needs.docker_build_scan_push.result == 'success' || needs.docker_build_scan_push.result == 'skipped')
+        (needs.docker_build_scan_push.result == 'success' || needs.docker_build_scan_push.result == 'skipped') &&
+        (needs.ui_tests_image.result == 'success' || needs.ui_tests_image.result == 'skipped')
       needs: [
         create_tags,
         docker_build_scan_push,
-        # ui_tests_image
+        ui_tests_image
       ]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
