restore full pipeline

--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -54,28 +54,28 @@ jobs:
     with:
       tag: ${{ needs.create_tags.outputs.version_tag }}
 
-  # terraform_account_workflow_development:
-  #   name: TF Plan Dev Account
-  #   uses: ./.github/workflows/terraform_account_job.yml
-  #   with:
-  #     workspace_name: development
-  #   secrets: inherit # pragma: allowlist secret
+  terraform_account_workflow_development:
+    name: TF Plan Dev Account
+    uses: ./.github/workflows/terraform_account_job.yml
+    with:
+      workspace_name: development
+    secrets: inherit # pragma: allowlist secret
 
-  # terraform_account_workflow_preproduction:
-  #   name: TF Plan Preprod Account
-  #   needs: terraform_account_workflow_development
-  #   uses: ./.github/workflows/terraform_account_job.yml
-  #   with:
-  #     workspace_name: preproduction
-  #   secrets: inherit # pragma: allowlist secret
+  terraform_account_workflow_preproduction:
+    name: TF Plan Preprod Account
+    needs: terraform_account_workflow_development
+    uses: ./.github/workflows/terraform_account_job.yml
+    with:
+      workspace_name: preproduction
+    secrets: inherit # pragma: allowlist secret
 
-  # terraform_account_workflow_production:
-  #   name: TF Plan Prod Account
-  #   needs: terraform_account_workflow_development
-  #   uses: ./.github/workflows/terraform_account_job.yml
-  #   with:
-  #     workspace_name: production
-  #   secrets: inherit # pragma: allowlist secret
+  terraform_account_workflow_production:
+    name: TF Plan Prod Account
+    needs: terraform_account_workflow_development
+    uses: ./.github/workflows/terraform_account_job.yml
+    with:
+      workspace_name: production
+    secrets: inherit # pragma: allowlist secret
 
   ui_tests_image:
     name: Run Cypress UI Tests On Images
@@ -106,35 +106,34 @@ jobs:
         version_tag: ${{ needs.create_tags.outputs.version_tag }}
       secrets: inherit # pragma: allowlist secret
 
-  # ui_tests_pr_env:
-  #   name: Run Cypress UI Tests On PR Environment
-  #   uses: ./.github/workflows/ui_test_job.yml
-  #   needs: [pr_deploy, create_tags]
-  #   with:
-  #     run_against_image: false
-  #     base_url: "https://${{ needs.pr_deploy.outputs.url }}"
-  #     tag: ${{ needs.create_tags.outputs.version_tag }}
-  #     changes_detected: ${{ needs.detect_changes.outputs.changes_detected }}
-  #   secrets: inherit # pragma: allowlist secret
+  ui_tests_pr_env:
+    name: Run Cypress UI Tests On PR Environment
+    uses: ./.github/workflows/ui_test_job.yml
+    needs: [pr_deploy, create_tags]
+    with:
+      run_against_image: false
+      base_url: "https://${{ needs.pr_deploy.outputs.url }}"
+      tag: ${{ needs.create_tags.outputs.version_tag }}
+    secrets: inherit # pragma: allowlist secret
 
-  # always_remove_ingress:
-  #   name: Remove CI ingress from environment
-  #   if: ${{ always() }}
-  #   uses: ./.github/workflows/remove_ingress_job.yml
-  #   needs: [ui_tests_pr_env]
-  #   secrets: inherit # pragma: allowlist secret
+  always_remove_ingress:
+    name: Remove CI ingress from environment
+    if: ${{ always() }}
+    uses: ./.github/workflows/remove_ingress_job.yml
+    needs: [ui_tests_pr_env]
+    secrets: inherit # pragma: allowlist secret
 
-  # end_of_pr_workflow:
-  #   name: End of PR Workflow
-  #   if: github.ref != 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: "dev_${{ needs.create_tags.outputs.environment_workspace_name }}"
-  #     url: "https://${{ needs.pr_deploy.outputs.url }}"
-  #   needs: [pr_deploy, create_tags, ui_tests_pr_env]
-  #   steps:
-  #     - name: End of PR Workflow
-  #       run: |
-  #         echo "${{ needs.pr_deploy.outputs.terraform_workspace_name }} PR environment tested, built and deployed"
-  #         echo "Tag Deployed: ${{ needs.pr_deploy.outputs.terraform_container_version }}"
-  #         echo "URL: https://${{ needs.pr_deploy.outputs.url }}"
+  end_of_pr_workflow:
+    name: End of PR Workflow
+    if: github.ref != 'refs/heads/main'
+    runs-on: ubuntu-latest
+    environment:
+      name: "dev_${{ needs.create_tags.outputs.environment_workspace_name }}"
+      url: "https://${{ needs.pr_deploy.outputs.url }}"
+    needs: [pr_deploy, create_tags, ui_tests_pr_env]
+    steps:
+      - name: End of PR Workflow
+        run: |
+          echo "${{ needs.pr_deploy.outputs.terraform_workspace_name }} PR environment tested, built and deployed"
+          echo "Tag Deployed: ${{ needs.pr_deploy.outputs.terraform_container_version }}"
+          echo "URL: https://${{ needs.pr_deploy.outputs.url }}"
