--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -108,6 +108,7 @@ jobs:
 
   ui_tests_pr_env:
     name: Run Cypress UI Tests On PR Environment
+    if: always()
     uses: ./.github/workflows/ui_test_job.yml
     needs: [pr_deploy, create_tags]
     with:
