--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -108,7 +108,9 @@ jobs:
 
   ui_tests_pr_env:
     name: Run Cypress UI Tests On PR Environment
-    if: always()
+    if: |
+      always() &&
+      needs.pr_deploy.result == 'success'
     uses: ./.github/workflows/ui_test_job.yml
     needs: [pr_deploy, create_tags]
     with:
@@ -119,7 +121,7 @@ jobs:
 
   always_remove_ingress:
     name: Remove CI ingress from environment
-    if: ${{ always() }}
+    if: always()
     uses: ./.github/workflows/remove_ingress_job.yml
     needs: [ui_tests_pr_env]
     secrets: inherit # pragma: allowlist secret
